--- a/prob1_2024/elem.html
+++ b/prob1_2024/elem.html
@@ -157,7 +157,7 @@ function myFunction() {
 <a href="#SRSWOR">SRSWOR</a>
 </li>
 <li>
-<a href="#Practice problems">Practice problems</a>
+<a href="#Problems for practice">Problems for practice</a>
 </li>
 </ul>
 <hr/>
@@ -364,12 +364,12 @@ Here instead of Heads and Tails you get 1's and 2's. You can tell
 R explicitly to use the labels "H" and "T" as follows.
 <font color="red">
 <pre>
-sample( c("H", "T"), 100, rep=T)
+sample( c('H', 'T'), 100, rep=T)
 </pre>
 </font><input type="button"
 value="Run in cloud"
 onclick="javascript:aha(encodeURI(`
-sample( c("H", "T"), 100, rep=T)
+sample( c('H', 'T'), 100, rep=T)
 `));"/>
 Note the <font size="+1" color="red"><code>c(...)</code></font>. That is R's way of making an array
 of things. Here the things are the two labels "H" and "T". Note
@@ -387,20 +387,20 @@ these five proportions against (no. of tosses so far). The R
 command is
 <font color="red">
 <pre>
-outcomes = sample(c("H","T"),1000,rep=T)
-heads.so.far = cumsum(outcomes == "H")
+outcomes = sample(c('H','T'),1000,rep=T)
+heads.so.far = cumsum(outcomes == 'H')
 tosses.so.far = 1:1000
 prop = heads.so.far/tosses.so.far
-plot(prop, type="l")
+plot(prop, type='l')
 </pre>
 </font><input type="button"
 value="Run in cloud"
 onclick="javascript:aha(encodeURI(`
-outcomes = sample(c("H","T"),1000,rep=T)
-heads.so.far = cumsum(outcomes == "H")
+outcomes = sample(c('H','T'),1000,rep=T)
+heads.so.far = cumsum(outcomes == 'H')
 tosses.so.far = 1:1000
 prop = heads.so.far/tosses.so.far
-plot(prop, type="l")
+plot(prop, type='l')
 `));"/>
 Explanation of the code:
 <ul>
@@ -455,7 +455,7 @@ sample(52,5).
 <p></p>
 
 <h1><a
-name="Practice problems">Practice problems</a></h1>
+name="Problems for practice">Problems for practice</a></h1>
 The following problems will help you to enjoy the course
 better. However, no coding problem will be asked in the exams.
 <ol type="">
