--- a/prob1_2024/basic.html
+++ b/prob1_2024/basic.html
@@ -72,7 +72,7 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
   });
 </script>
 <style>
-body {
+body,table {
   margin: 0;
   font-size: 40;
   //background: #000;
@@ -512,9 +512,10 @@ If $x\in A$  then $x\in A_n$  for some $n\in{\mathbb N}.$  Let $n_0$  be the lea
 <p></p>
 Hence $A\subseteq \cup B_n.$
 <p></p>
-Conversely, let $y\in \cup_n B_n.$  Then $y\in A_n\subseteq A.$
+Conversely, let $B_n\subseteq A_n.$ 
 <p></p>
-So $\cup B_n \subseteq A.$<p></p>
+So $\cup B_n \subseteq\cup_n A_n =  A.$
+<p></p>
 Combining, $\cup B_n = A.$
 </div>
 
@@ -537,6 +538,41 @@ or $1-P(A_n)\rightarrow 1-P(A),$ or $P(A_n)\rightarrow P(A),$ as required.
 
 <b><i>[QED]</i></b>
 </p>
+
+<p></p>
+
+<p>
+<b>EXERCISE 5:</b>&nbsp;<b>(A puzzle)</b>  You are approached by a gambler at a casino. "Hmm, youngester", he remarks
+ as he looks you up and down, "you seem to be new here. Let me offer you some money." He comes
+ closer, sits beside you, and continues in a friendly voice, "Here I have a die, a fair one. You
+ shall roll it again and again. After each roll, we shall do a little transaction like this: if the die shows six,
+ you  pay me some positive  amount, say $t.$ But if it shows
+ any other number I shall pay you ten times that amount. Does that sound like a good game to you?"
+<p></p>
+ Being freshly admitted to ISI, you are of course proud of your probability skills, and reply
+ "Yes". 
+<p></p>
+"That's very good for you, very good indeed", exclaims the man in glee, "but it is not
+ good for <i>me</i>, you see. I just made the offer because I took a liking to you. I hope that you would
+ keep two requests in return." 
+<p></p>
+You get cautious, but agree to hear them anyway. 
+<p></p>
+"The first request
+ is that <i>I</i> shall dictate the value of $t$  before each roll". Noticing a cloud of worry upon your face, he adds,
+ "Don't worry, $t $ will always be
+ positive, and I shall fix the amount <i>before</i>  the roll." 
+<p></p>
+You see no harm in that, and ask him to proceed.
+<p></p>
+ "The seond favour that I ask for is to call it quits whenever I like. That means I shall decide when the game
+ will stop.  It is only the barest protection for me, you see. I shall soon become bankrupt, and then
+ I at least need to have my right to go back home! Surely you would not deny me <i>that</i> !" 
+<p></p>
+You find the entire offer  reasonable enough, and so
+accept it.
+<p></p>
+Have you done a wise thing? [Hint: the die is indeed fair, and there is no word play. It is a pure mathematical puzzle.]  </p>
 
 <p></p>
 
@@ -921,7 +957,7 @@ name="Sets and Venn diagrams">Sets and Venn diagrams</a></h3>
 <p></p>
 
 <p>
-<b>EXERCISE 5:</b>&nbsp;Let $E,F,G$ be any three events. Find expressions for
+<b>EXERCISE 6:</b>&nbsp;Let $E,F,G$ be any three events. Find expressions for
 the event that of $E,F,G$
 <ol type="">
 
@@ -953,18 +989,18 @@ the event that of $E,F,G$
 <p></p>
 
 <p>
-<b>EXERCISE 6:</b>&nbsp;Show that $E\cap (F\cup G) = (E\cap F)\cup (E\cap
+<b>EXERCISE 7:</b>&nbsp;Show that $E\cap (F\cup G) = (E\cap F)\cup (E\cap
 G).$</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 7:</b>&nbsp;Show that $(A\cup B)^c = A^c \cap B^c.$</p>
+<b>EXERCISE 8:</b>&nbsp;Show that $(A\cup B)^c = A^c \cap B^c.$</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 8:</b>&nbsp;State (with proof/counterexample) which of the following statements is
+<b>EXERCISE 9:</b>&nbsp;State (with proof/counterexample) which of the following statements is
 correct/incorrect:
 <ol type="">
 
@@ -989,7 +1025,7 @@ name="Axioms">Axioms</a></h3>
 <p></p>
 
 <p>
-<b>EXERCISE 9:</b>&nbsp;Take $\Omega = \{0,1,2\}.$ Obtain
+<b>EXERCISE 10:</b>&nbsp;Take $\Omega = \{0,1,2\}.$ Obtain
 functions $P_i:\Omega\rightarrow{\mathbb R}$ for $i=1,2,3$ such
 that $P_i$ violates axiom $i$, but satisfies the other
 two.</p>
@@ -997,7 +1033,7 @@ two.</p>
 <p></p>
 
 <p>
-<b>EXERCISE 10:</b>&nbsp;If $P(A)=0.9$ and $P(B)=0.8,$ show that $P(A\cap
+<b>EXERCISE 11:</b>&nbsp;If $P(A)=0.9$ and $P(B)=0.8,$ show that $P(A\cap
 B)\geq 0.7.$ In general, show that $P(A\cap B)\geq
 P(A)+P(B)-1.$ This is known as Bonferroni's
 inequality.
@@ -1006,7 +1042,7 @@ inequality.
 <p></p>
 
 <p>
-<b>EXERCISE 11:</b>&nbsp;Show that 
+<b>EXERCISE 12:</b>&nbsp;Show that 
 $$
 P\left( \cup_1^n A_i\right) \leq \sum_1^n P(A_i).
 $$
@@ -1020,7 +1056,7 @@ name="Equally likely">Equally likely</a></h3>
 <p></p>
 
 <p>
-<b>EXERCISE 12:</b>&nbsp;An SRSWOR of size 2 is drawn from $\{1,2,3,4,5\}.$ What
+<b>EXERCISE 13:</b>&nbsp;An SRSWOR of size 2 is drawn from $\{1,2,3,4,5\}.$ What
 is the probability that (a) the first selected digit is odd?
 (b) the second selected digit is odd? (c) both are odd? (d) at
 least one is odd?
@@ -1029,34 +1065,34 @@ least one is odd?
 <p></p>
 
 <p>
-<b>EXERCISE 13:</b>&nbsp;A fair coin is tossed 6 times. What is the probability that
+<b>EXERCISE 14:</b>&nbsp;A fair coin is tossed 6 times. What is the probability that
 the first head occurs (a) at the third toss? (b) not before the
 third toss?</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 14:</b>&nbsp;10 distinct balls are dropped randomly in 3 distinct
+<b>EXERCISE 15:</b>&nbsp;10 distinct balls are dropped randomly in 3 distinct
 boxes. What is the probability that none of the boxes remain
 empty?</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 15:</b>&nbsp;Two fair dice are tossed, what is the probability that the
+<b>EXERCISE 16:</b>&nbsp;Two fair dice are tossed, what is the probability that the
 sum is $i$ for $i=2,3,...,12?$</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 16:</b>&nbsp;Two cards are randomly selected from a deck of 52 playing
+<b>EXERCISE 17:</b>&nbsp;Two cards are randomly selected from a deck of 52 playing
 cards. What is the probability that they are of the same
 denomination?</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 17:</b>&nbsp;10 light bulbs are shining in a row. If a lightning strikes, then
+<b>EXERCISE 18:</b>&nbsp;10 light bulbs are shining in a row. If a lightning strikes, then
 some (or all or none) of the light bulbs may go out (all possibilities
 being equally likely). What is the chance that after a
 lightning  at least two consecutive light bulbs are still
@@ -1065,7 +1101,7 @@ shining.</p>
 <p></p>
 
 <p>
-<b>EXERCISE 18:</b>&nbsp;We have 4 letters and their respective addressed
+<b>EXERCISE 19:</b>&nbsp;We have 4 letters and their respective addressed
 envelopes. If the letters are placed randomly in the envelopes,
 then find the probability that exactly $k$ letters are in their correct
 envelopes for $k=1,2,3,4.$ </p>
@@ -1073,41 +1109,41 @@ envelopes for $k=1,2,3,4.$ </p>
 <p></p>
 
 <p>
-<b>EXERCISE 19:</b>&nbsp;The numbers $1,2,...,n$ are arranged in random
+<b>EXERCISE 20:</b>&nbsp;The numbers $1,2,...,n$ are arranged in random
 order. Find the probability that the digits $1,2,3$ appear
 as neighbours in this order.</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 20:</b>&nbsp;$A$ throws six dice and wins if he scores at least one
+<b>EXERCISE 21:</b>&nbsp;$A$ throws six dice and wins if he scores at least one
 ace. $B$ throws twelve dice and wins if he scores at least
 two aces. Who has the greater probability to win?</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 21:</b>&nbsp;Find the probability that among three random digits there
+<b>EXERCISE 22:</b>&nbsp;Find the probability that among three random digits there
 appear exactly 1,2 or 3 different digits. Also do the same for
 four random digits.</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 22:</b>&nbsp;Find, for $r=1,2,3,...$, the probability $p_r$ that in a sample of $r$
+<b>EXERCISE 23:</b>&nbsp;Find, for $r=1,2,3,...$, the probability $p_r$ that in a sample of $r$
 random digits no two are equal.</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 23:</b>&nbsp;If $n$ balls are placed at random among $n$ cells,
+<b>EXERCISE 24:</b>&nbsp;If $n$ balls are placed at random among $n$ cells,
 find the probability that exactly one cell remains
 empty.</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 24:</b>&nbsp;A man is given $n$ keys of which only one fits his
+<b>EXERCISE 25:</b>&nbsp;A man is given $n$ keys of which only one fits his
 door. He tries them successively using SRSWOR until he finds the
 right key. Show that the probability that he will try $k$
 keys is $\frac 1n$ for $k=1,...,n.$</p>
@@ -1115,7 +1151,7 @@ keys is $\frac 1n$ for $k=1,...,n.$</p>
 <p></p>
 
 <p>
-<b>EXERCISE 25:</b>&nbsp;Suppose that each of $n$ sticks is broken into one long
+<b>EXERCISE 26:</b>&nbsp;Suppose that each of $n$ sticks is broken into one long
 and one short part. The resulting $2n$ pieces are combined
 pairwise in a random fashion. What is the probability that the
 original pairings are restored? What is the probability that each
@@ -1124,28 +1160,28 @@ long piece gets a short partner?</p>
 <p></p>
 
 <p>
-<b>EXERCISE 26:</b>&nbsp;A box contains 90 good and 10 defective screws. If 10 screws
+<b>EXERCISE 27:</b>&nbsp;A box contains 90 good and 10 defective screws. If 10 screws
 are selected at random (SRSWOR), then find the probability that
 none of these are defective.</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 27:</b>&nbsp;From the set $\{a,b,c,d,e\}$ we draw an SRSWR of size
+<b>EXERCISE 28:</b>&nbsp;From the set $\{a,b,c,d,e\}$ we draw an SRSWR of size
 25. What is the probability that the sample will have 5
 occurrences of each of the letters?</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 28:</b>&nbsp;If $n$ men (including $A$ and $B$) stand in a
+<b>EXERCISE 29:</b>&nbsp;If $n$ men (including $A$ and $B$) stand in a
 row in random order, what is the probability that there will be
 exactly $r$ men between $A$ and $B?$</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 29:</b>&nbsp;What is the probability that two throws with three dice each
+<b>EXERCISE 30:</b>&nbsp;What is the probability that two throws with three dice each
 will show the same configuration if (a) the dice are distinct
 (<i>e.g.</i>, $(2,3,6)$ is not the same as $(3,2,6)$).
 (b) the dice are identical (<i>e.g.</i>, $\{2,3,6\}$ is the same
@@ -1154,7 +1190,7 @@ as $\{3,2,6\}$)?</p>
 <p></p>
 
 <p>
-<b>EXERCISE 30:</b>&nbsp;There are $n$ persons in a room. Assuming that each
+<b>EXERCISE 31:</b>&nbsp;There are $n$ persons in a room. Assuming that each
 person is equally likely to be born in any day of the year (1
 year=365 days), find the probability that at least two persons
 share the same birthday. </p>
@@ -1165,7 +1201,7 @@ share the same birthday. </p>
 name="Harder">Harder</a></h3>
 
 <p>
-<b>EXERCISE 31:</b>&nbsp;A town has $n+1$  people: $p_1,...,p_{n+1}.$ 
+<b>EXERCISE 32:</b>&nbsp;A town has $n+1$  people: $p_1,...,p_{n+1}.$ 
 A news is spreading as rumour in this town as follows. Initially,
 only $p_1$  knows the news. He communicates the news to
  one of the
@@ -1180,7 +1216,7 @@ without being repeated to any person.
 <p></p>
 
 <p>
-<b>EXERCISE 32:</b>&nbsp;<center>
+<b>EXERCISE 33:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most1.png"></th>
@@ -1195,7 +1231,7 @@ without being repeated to any person.
 <p></p>
 
 <p>
-<b>EXERCISE 33:</b>&nbsp;<center>
+<b>EXERCISE 34:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most8.png"></th>
@@ -1210,7 +1246,7 @@ without being repeated to any person.
 <p></p>
 
 <p>
-<b>EXERCISE 34:</b>&nbsp;<center>
+<b>EXERCISE 35:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most19.png"></th>
@@ -1225,7 +1261,7 @@ without being repeated to any person.
 <p></p>
 
 <p>
-<b>EXERCISE 35:</b>&nbsp;<center>
+<b>EXERCISE 36:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most27.png"></th>
@@ -1240,7 +1276,7 @@ without being repeated to any person.
 <p></p>
 
 <p>
-<b>EXERCISE 36:</b>&nbsp;<center>
+<b>EXERCISE 37:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most28.png"></th>
@@ -1253,7 +1289,7 @@ without being repeated to any person.
 </p>
 
 <p>
-<b>EXERCISE 37:</b>&nbsp;<center>
+<b>EXERCISE 38:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most31.png"></th>
@@ -1268,7 +1304,7 @@ without being repeated to any person.
 <p></p>
 
 <p>
-<b>EXERCISE 38:</b>&nbsp;<center>
+<b>EXERCISE 39:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most32.png"></th>
@@ -1283,7 +1319,7 @@ without being repeated to any person.
 <p></p>
 
 <p>
-<b>EXERCISE 39:</b>&nbsp;Let $A_1,A_2,A_3$ be three events. Let $p_1 = \sum
+<b>EXERCISE 40:</b>&nbsp;Let $A_1,A_2,A_3$ be three events. Let $p_1 = \sum
 P(A_i)$ and $p_2 = \sum_{i&lt; j} P(A_i\cap A_j)$ and $p_3 = P(A_1\cap A_2\cap A_3).$
 Find (in terms of $p_i$'s) the probability that exactly one of the
 events $A_1,A_2,A_3$ has occurred. Generalise to $n$
