--- a/prob1_2024/survival.html
+++ b/prob1_2024/survival.html
@@ -72,7 +72,7 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
   });
 </script>
 <style>
-body {
+body,table {
   margin: 0;
   font-size: 40;
   //background: #000;
@@ -155,6 +155,18 @@ function myFunction() {
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#How to cope with hostel life">How to cope with hostel life</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Three scenarios of disaster">Three scenarios of disaster</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Scenario 1: The puzzle-loving kid">Scenario 1: The puzzle-loving kid</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Scenario 2: The math whiz kid">Scenario 2: The math whiz kid</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Scenario 3: The village kid who hates urban life">Scenario 3: The village kid who hates urban life</a>
 </li>
 </ul>
 <hr/>
@@ -284,6 +296,58 @@ home. Make friends (take the initiative), play, read story books,
 and above all don't skip meals or sleep. Also explore the nooks
 and corners of the campus, the rooftops, ponds, and the strange
 hidden stairways (I leave you to find them!). 
+<p></p>
+
+<h2><a
+name="Three scenarios of disaster">Three scenarios of disaster</a></h2>
+Here are three scenarios that ruin students at ISI.
+<h3><a
+name="Scenario 1: The puzzle-loving kid">Scenario 1: The puzzle-loving kid</a></h3>
+ You are very serious, study the lectures extremely carefully, and notice some intriguing point
+ somewhere. You smell a puzzle, get interested,
+try to understand it, and start ignoring the other subjects.
+Your time is spent in  Google searches, unearthing tonnes of research papers, sending emails to
+ professors about your findings. You even get encouragement from some of them. You start thinking that you
+ are well on your way to a brilliant research career. The other subjects lie neglected. After two
+ weeks the excitement subsides leaving you with a bunch of confusion and a huge lag in your
+ regular study. You find yourself tottering on the verge of a downfall. 
+<p></p>
+
+<b>Remedy</b>: Never lose track of your regular coursework. You'll get plenty of scope to do
+ research later. For now give top priority to the regular (possibly boring) coursework. Indulge in
+ such extra research only after you have made your fair notes for each subject. If you are afraid
+ of losing your research ideas, keep a separate notebook for jotting them down.
+<p></p>
+
+<h3><a
+name="Scenario 2: The math whiz kid">Scenario 2: The math whiz kid</a></h3>
+You are a superb math whiz kid cracking the hardest math nuts as easily as if your brain
+ were just a giant nut cracker. You know that great mathematicians were all eccentric persons who
+ disliked there regular studies. You already know the things taught at Masters level,
+ and are eager to do advanced math project under some professor who is impressed with your abilities.
+ You find statistics a most boring subject. You start bunking stat classes. "After all, ISI cannot
+ punish a bright math student like me for   flunking in stats", you think. You are wrong. ISI is a cruel place. You'll
+ lose your stipend, repeat years and possibly get chucked out if you regularly flunk in the stat classes. 
+<p></p>
+
+<b>Remedy:</b>  Shift to B Math. Or make sure you keep at least a passing score in the stat classes.  
+<h3><a
+name="Scenario 3: The village kid who hates urban life">Scenario 3: The village kid who hates urban life</a></h3>
+If you are this kid, then most likely you are not reading this, because class webpages are too urban a concept for you. You
+ are fresh from a village. Possibly you are the first in your family to get higher education. 
+You miss your rural surroundings, hate the dust and noise of city life. You hate your classmates because they make fun of
+ you, and talk about outlandish things. You find it difficult to communicate in English. But you
+ love your hostel room (and the
+ stipend). So you stop coming
+ to class, you just enjoy your hostel room, and accept the stipend as a permanent gift from god. Then one
+ day you learn that you will be chucked out or have to repeat the year without stipend.   
+<p></p>
+
+<b>Remedy:</b>  Form a group with the  other students from rural background (may be from the other batches). 
+Socio-economic barrier is a big barrier, and so do not expect much help from your urban classmates initially. Meet the
+ professors (preferably all
+ the rural batchmates together) <i>outside the class</i>, and explain your situation. Most professors understand Hindi, and some even
+ speak fluent Hindi. They generally understand the special needs of students from rural background.  
 <p></p>
 
 <h3>Comments</h3>
