--- a/jsoft/ga.html
+++ b/jsoft/ga.html
@@ -3,8 +3,11 @@
 <meta content="text/html;charset=UTF-8" http-equiv="Content-Type"/>
 <link rel="stylesheet" type="text/css" href="../tools/ctut.css"/>
 <link type="text/css" rel="stylesheet" href="../tools/style.css"/>
-<style type="text/css">@font-face {font-family: SHREE_BAN_OTF_0592;src: local("../tools/SHREE_BAN_OTF_0592"),url(../tools/SHREE0592.woff) format("opentype");</style>
+<style type="text/css">@font-face {font-family: SHREE_BAN_OTF_0592;src: local("../tools/SHREE_BAN_OTF_0592"),url(../tools/SHREE-BAN-OTF-new.woff) format("opentype");</style>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v19.0" nonce="Q7jTbrCq"></script>
+
 <script src="../tools/jquery-1.10.2.min.js"></script>
 
 <script>
@@ -67,13 +70,74 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
       }
     }
   });
-</script><script type="text/javascript" src="https://www.isical.ac.in/~arnabc/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="../MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
+</script>
+<style>
+body,table {
+  margin: 0;
+  font-size: 40;
+  //background: #000;
+  //color: #fff;
+}
+
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: #555;
+  color: #f1f1f1;
+}
+
+.cu {
+  background: #ffcccc;
+}
+
+.bu {
+  background: #ccccff;
+}
+
+.scrpt {
+  border-left: 5px solid black;
+}
+
+.box {
+  border: 2px solid black;
+  display: inline-block;
+}
+</style>
+<script>
+window.onscroll = function() {myFunction()};
+window.onload = function() {myInit()};
+
+var header, tphldr;
+function myInit() {
+  header = document.getElementsByClassName("header");
+  tphldr = document.getElementById("topholder");
+}
+
+function myFunction() {
+  var index = -1
+  for(i=0;i<header.length;i++) {
+    if (window.pageYOffset > header[i].offsetTop) {
+       index = i
+    }
+    else {
+       break
+    }
+  }
+
+  if(index < 0) 
+    tphldr.innerHTML = "";
+  else
+    tphldr.innerHTML = header[index].innerHTML
+}
+</script><script type="text/javascript" src="https://arnabc74.github.io/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="file:///home/asu/na/v/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
 <link href="../tools/rgl.css" rel="stylesheet"></link>
 <script src="../tools/rglClass.src.js"></script>
 <script src="../tools/CanvasMatrix.src.js"></script>
 <script src="../tools/rglWebGL.js"></script>
-</head>
-<body>
+</head><body>
+<div class="sticky" id="topholder"> </div>
 <a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
 <h3>Table of contents</h3>
 <ul>
@@ -109,7 +173,7 @@ This the multivector
 $$3.4 e_{\{1,3\}}+6.5 e_{\{1,4,5\}}-4
 e_{\{1,3\}}.$$
 Notice that $e_{\{1,3\}}$ occurs more than once. We may
-combine all occurences of it by using the <code>comb</code>
+combine all occurences of it by using the <font size="+1" color="red"><code>comb</code></font>
 function:
 <span class="j">
 <pre>
@@ -138,35 +202,48 @@ symbolically by $\langle v\rangle_k.$ In J
 </pre>
 </span>
 
+<p></p>
 
 <pre>
 cin=: 4 :0"0 2
- vy=:{:"1 y
- cy=:;{."1 y
- wh=:x=vy
- if. +./ wh do.
-    wh#cy
- else. 
-    0
+ vy=:{:"1 y  NB. Extract the array of e's.
+ cy=:;{."1 y NB. Extract the array of coefficients
+ wh=:x=vy    NB. Find which terms have the matching e's.
+ if. +./ wh do. NB. If there is at least one nonzero 
+    wh#cy       NB.   return the corresponding coefficients.
+ else.         
+    0          
  end.
 )
-vp=: |:@:(((,1);(,2);,3)&amp;cin )
-sp=: (&lt;i.0)&amp;cin
-
-f=: 4 : 0
-  left=: (x&gt;y)#y
-  xniny=:1-x e. y
-  mid =: xniny#x
-  (2|#left){ 1 _1
+<p></p>
+vp=: |:@:(((,1);(,2);,3)&amp;cin ) NB. Extract the 1-vector part. The |: makes a list.
+sp=: {.@((&lt;i.0)&amp;cin)  NB. Extract the scalar part. The {. makes the result an atom.
+<p></p>
+NB. The next function is not used.
+oldf=: 4 : 0
+  left=: (x&gt;y)#y          NB. How many y-elements are smaller than corresponding x-elements.
+  NB. xniny=:1-x e. y
+  NB. mid =: xniny#x
+  (2|#left){ 1 _1         NB. The answer is the parity of this.
 )
-
-g=: 4 : 0
-  s1=:*/x f"0 1 y
-  s2=: (5 e. x)*. 5 e. y
-  sign=:s1*s2{1 _1
-  sign;/:~ x (-.,-.~) y
+<p></p>
+NB. Suppose that you have a sorted list 1 2 3 8 9 and you want to insert 3 in it from left.
+NB. What is the *smallest* number of elements in the list that it has to cross? The answer is
+NB. 2 (it needs to cross 1 and 2). The following function returns +1 if this is even, -1 else. 
+f=:{{ 1 _1 {~ 2|+/x&gt;y  }}
+<p></p>
+NB. The following verb find products of basis vectors.
+NB. Each basis vector is presented as a list of indices.
+NB. It finds the symmetric difference, sorts it, and appends a sign before.
+g=: 4 : 0                     
+  s1=:*/x f"0 1 y        NB. -1 if odd number of swaps needed to merge x and y
+  s2=: 1 _1 {~ (5 e. x)*. 5 e. y NB. -1 iff both x and y contain 5
+  sign=:s1*s2            
+  sign;/:~ x (-.,-.~) y NB. sign followed by the sorted symmetric difference of x and y
 )
-
+<p></p>
+NB. The main work horse behind the geometric product. Its multiplies just two terms.
+NB. <i>e.g.</i> (2; 1 3) mult (3; 2 3) should give (_6; 1 2)
 mult=: 4 : 0
   cx=:&gt;{.x
   cy=:&gt;{.y
@@ -177,9 +254,32 @@ mult=: 4 : 0
   vbp=: {:bp
   (cx*cy*cbp);vbp
 )
-
-
-
+<p></p>
+NB. The derived products.
+omult=: 4 :0
+tmp=:(gr x)+gr y
+tmp gx x mult y
+)
+<p></p>
+lmult=: 4 :0
+tmp=:(gr y)-gr x
+tmp gx x mult y
+)
+<p></p>
+rmult=: 4 :0
+tmp=:(gr x)-gr y
+tmp gx x mult y
+)
+<p></p>
+dmult=: 4 :0
+tmp=:|(gr x)-gr y
+tmp gx x mult y
+)
+<p></p>
+NB. Prettification is done in two steps:
+NB.       1. combining terms by basis elements,
+NB.       2. sorting by grades.
+NB. The first duty is carried out by the following verb.
 comb=: 3 : 0
   vy=:{:"1 y
   cy=:{."1 y 
@@ -191,73 +291,74 @@ comb=: 3 : 0
   nv1=: keep#nv
   nc1,. nv1
 )
-
+<p></p>
+NB. Grade sorting is done by the following verb.
+NB. Extract the boxed list of indices,
+NB. and for each term unbox, and find
+NB. the length of the list. Finally, sort y accordingly.
+srt=:{{ y /: (#@&gt;)"1{:"1 y }}
+<p></p>
+pretty=:srt@comb
+<p></p>
 gpbad=: 4 : 'comb ,/ x mult"1/ y'
+<p></p>
+NB. The prettified versions that are actually used.
 gp=:comb@,/@(mult"1/)
-omult=: 4 :0
-tmp=:(gr x)+gr y
-tmp gx x mult y
-)
-lmult=: 4 :0
-tmp=:(gr y)-gr x
-tmp gx x mult y
-)
-rmult=: 4 :0
-tmp=:(gr x)-gr y
-tmp gx x mult y
-)
-dmult=: 4 :0
-tmp=:|(gr x)-gr y
-tmp gx x mult y
-)
-
-
-dp=:comb@,/@(dmult"1/)
-
-op=:comb@,/@(omult"1/)
-lp=:comb@,/@(lmult"1/)
-rp=:comb@,/@(rmult"1/)
-
+<p></p>
+dp=:pretty@,/@(dmult"1/)
+<p></p>
+op=:pretty@,/@(omult"1/)
+lp=:pretty@,/@(lmult"1/)
+rp=:pretty@,/@(rmult"1/)
+<p></p>
 ip=: 0 &amp; gx @ gp
-
-ad=:comb@,
+<p></p>
+ad=:pretty@,
+<p></p>
 sm=: 4 : 0"0 2
   tmp=: &lt;"0 x*;{.|:y
   tmp,.{:|:y
 )
-
+<p></p>
 gr=:#@:&gt;@ {:
 sb=: [ ad (_1&amp;sm@])
 gx=: 4 :0
 len=: gr"1 y
 (len=x)#y
 )
-
-
+<p></p>
 e=: 3 :  'y(;"0 1) 1, 2 ,:3'
-
+<p></p>
 c=: 3 :0
   p=: e y
   o ad p ad 0.5 sm p gp p gp i
 )
-
+<p></p>
 ci=: 3 :0
   scale=.- sc y ip i
   (vp y) % scale
 )
-
+<p></p>
+NB. Reciprocal that gives correct answer only for multivectors with non-null v gp rev v 
+recip=:%@sp@(gp rev) sm rev
+<p></p>
+rev=: 3 :0"1
+'a b'=.y
+newa=.a*1-2*2 3 e.~ 4|#b
+newa;b
+)
 v=: (3.4;1 3),(6.5; 1 4 5),: (_4; 1 3)
 e1=:1 2$1;1#1
 e2=:1 2$1;1#2
 e3=:1 2$1;1#3
 e4=:1 2$1;1#4
 e5=:1 2$1;1#5
-o=: 0.5 sm e4 ad e5
-i=: e5 sb e4
-
+o=:  e4 ad e5
+i=: 0.5 sm e5 sb e4
+<p></p>
 scr=: 4 :'(c x) sb (0.5**:y) sm i'
 scp=: 4 :'(c y) dp (c x) op  i'
-
+<p></p>
 9!:7'+++++++++|-'
 </pre>
 <hr/>
@@ -267,6 +368,4 @@ scp=: 4 :'(c y) dp (c x) op  i'
 <td align="right"/>
 </tr>
 </table>
-<hr/>
-</body>
-</html>
+<hr/></body></html>
