--- a/jsoft/ga.html
+++ b/jsoft/ga.html
@@ -303,7 +303,7 @@ pretty=:srt@comb
 gpbad=: 4 : 'comb ,/ x mult"1/ y'
 <p></p>
 NB. The prettified versions that are actually used.
-gp=:comb@,/@(mult"1/)
+gp=:pretty@,/@(mult"1/)
 <p></p>
 dp=:pretty@,/@(dmult"1/)
 <p></p>
