--- a/prob1_2024/basic.html
+++ b/prob1_2024/basic.html
@@ -828,7 +828,7 @@ Same problem as above, except that the balls are now identical. The boxes are st
 What is the answer now?
 <p></p>
 <b>SOLUTION:</b>
-By the bar-star argument $|\Omega| = \binom{12}{2}=66.$
+By the <a href="barstar.html">bar-star argument</a> $|\Omega| = \binom{12}{2}=66.$
 <p></p>
 Similarly, $|A| = \binom{11}{1} = 11.$
 <p></p>
@@ -886,7 +886,7 @@ No real life particle shows this behaviour.</li>
 
 <li>
 <b>Bose-Einstein distribution:</b> The balls are
-identical. So, by the bar-star argument, we know that there
+identical. So, by the <a href="barstar.html">bar-star argument</a>, we know that there
 are ${n+r-1\choose n-1}$ configurations possible. These are
 assumed equally likely.</li>
 
