--- a/prob1_2024/basic.html
+++ b/prob1_2024/basic.html
@@ -542,7 +542,7 @@ or $1-P(A_n)\rightarrow 1-P(A),$ or $P(A_n)\rightarrow P(A),$ as required.
 <p></p>
 
 <p>
-<b>EXERCISE 5:</b>&nbsp;<b>(A puzzle)</b>  You are approached by a gambler at a casino. "Hmm, youngester", he remarks
+<b>EXERCISE 5:</b>&nbsp;<b>(A puzzle)</b>  You are approached by a gambler at a casino. "Hmm, youngster", he remarks
  as he looks you up and down, "you seem to be new here. Let me offer you some money." He comes
  closer, sits beside you, and continues in a friendly voice, "Here I have a die, a fair one. You
  shall roll it again and again. After each roll, we shall do a little transaction like this: if the die shows six,
@@ -565,7 +565,7 @@ You get cautious, but agree to hear them anyway.
 <p></p>
 You see no harm in that, and ask him to proceed.
 <p></p>
- "The seond favour that I ask for is to call it quits whenever I like. That means I shall decide when the game
+ "The second favour that I ask for is to call it quits whenever I like. That means I shall decide when the game
  will stop.  It is only the barest protection for me, you see. I shall soon become bankrupt, and then
  I at least need to have my right to go back home! Surely you would not deny me <i>that</i> !" 
 <p></p>
@@ -773,7 +773,7 @@ function as well. Examples of such functions include length, area, volume, mass,
  true for any measure of size.
 <p></p>
  Indeed, all functions that satisfy  axiom three are called <b>(signed) measure</b>s, and 
-meaure theory is the branch of mathematics that deals with them. 
+measure theory is the branch of mathematics that deals with them. 
 <p></p>
 
 <h2><a
@@ -783,7 +783,7 @@ $$
 S = \{x_1,x_2,...\},
 $$
 then take any sequence $p_1,p_2,...$ of nonnegative numbers
-ading up to $1.$ Defining $P(\{x_i\})=p_i$ completely
+adding up to $1.$ Defining $P(\{x_i\})=p_i$ completely
 specifies a probability. Conversely, any probability can be
 constructed like this.
 <p></p>
@@ -809,13 +809,13 @@ There are three distinct boxes and 10 distinct balls. The balls are dropped rand
  and each box can hold all the balls.) What is the probability that the first box is empty?
 <p></p>
 <b>SOLUTION:</b>
-Each of the 10 balls has 3 possible destinations, irreespective of the other balls. So the total 
+Each of the 10 balls has 3 possible destinations, irrespective of the other balls. So the total 
 number of configurations is $3^{10}.$  So $|\Omega|=3^{10}.$
 <p></p>
 Let $A$  be the event that the first ball remains empty. Then $A$  occurs if and only if all the balls land in
  the other 2 boxes. So $|A|=2^{10}.$  
 <p></p>
-Since all outocmes are equally likely hence 
+Since all outcomes are equally likely hence 
 $$P(A)= \frac{|A|}{|\Omega|} = \left(\frac 23\right)^{10}.$$
  ///
 </p>
@@ -918,7 +918,7 @@ in detecting theoretical mistakes too.
 <b>EXAMPLE 9:</b>&nbsp;
 A deck of 10 cards labelled 1,...,10 is shuffled thoroughly. We shall
 say that the $i$-th card is <i>at home</i>, if it is in
-the $i$-th positon after the shuffle. Write an R code to
+the $i$-th positron after the shuffle. Write an R code to
 estimate the probability that exactly 3 cards are at home. 
 <p></p>
 <b>SOLUTION:</b>
