--- a/prob1_2024/fluc.html
+++ b/prob1_2024/fluc.html
@@ -72,7 +72,7 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
   });
 </script>
 <style>
-body {
+body,table {
   margin: 0;
   font-size: 40;
   //background: #000;
@@ -319,7 +319,7 @@ mean(event)
 
 <p></p>
 Now we are going to learn some theorems that are
-interconnected. There interconnections are shown below:
+interconnected. Their interconnections are shown below:
 <center>
 <table width="100%">
 <tr>
