--- a/prob1_2024/basic.html
+++ b/prob1_2024/basic.html
@@ -191,14 +191,14 @@ space.
 <b>EXAMPLE 1:</b>&nbsp;A coin toss is a random experiment. Its sample space is $\{head,tail\}.$  There are four
  different events possible here: 
 $\phi, \{head\},\{tail\},\{head,tail\}.$
- ///
+ ■
 </p>
 
 <p></p>
 
 <p>
 <b>EXAMPLE 2:</b>&nbsp;Rolling a die is another random experiment. The sample space here is $\{1,2,3,4,5,6\}.$ 
- One possible event is the set of all even numbers, $\{2,4,6\}.$ ///
+ One possible event is the set of all even numbers, $\{2,4,6\}.$ ■
 </p>
 
 <p></p>
@@ -255,7 +255,7 @@ x = sample(6,5000,rep=T)
 B = x %in% c(1,3,4,5)
 mean(B)
 `));"/>
- ///
+ ■
 </p>
 
 <p></p>
@@ -311,7 +311,7 @@ A report says that the health condition in a country is so bad, that the chance 
 <b>SOLUTION:</b>
 Yes. Any baby surviving for at least 5 years has of course survived the first year as well. So how can the latter chance
  be larger?
- ///
+ ■
 </p>
 
 <p></p>
@@ -416,7 +416,7 @@ P(B) = P(A) + P(A^c\cap B).
 $$
 The second probability in the RHS is $\geq 0$ (by Axiom
 1). So done.
- ///
+ ■
 </p>
 
 <p></p>
@@ -817,7 +817,7 @@ Let $A$  be the event that the first ball remains empty. Then $A$  occurs if and
 <p></p>
 Since all outcomes are equally likely hence 
 $$P(A)= \frac{|A|}{|\Omega|} = \left(\frac 23\right)^{10}.$$
- ///
+ ■
 </p>
 
 <p></p>
@@ -833,7 +833,7 @@ By the <a href="barstar.html">bar-star argument</a> $|\Omega| = \binom{12}{2}=66
 Similarly, $|A| = \binom{11}{1} = 11.$
 <p></p>
 So the answer is $\frac 16.$
- ///
+ ■
 </p>
 
 <p></p>
@@ -901,7 +901,130 @@ of the boxes have one ball in it). All these
 configurations are assumed equally likely.</li>
 
 </ul>
- ///
+ ■
+</p>
+
+<p></p>
+Next we discuss a type of problems that are used in statistical
+quality control. 
+<p></p>
+
+<p>
+<b>EXAMPLE 9:</b>&nbsp;An electronic component is packaged 100 per box. Each
+component may be either good or defective. We want to accept a box
+if and only if it has no defective component in it. Testing all
+the 100 components one by one is too time consuming (and also
+useless if the test is destructive). So instead we draw a simple
+random sample without replacement (SRSWOR) of size 10 and reject
+the box if any of these 10 turns out to be defective. Find the
+probability that a box containing exactly 5 defectives will be
+rejected. 
+<p></p>
+<b>SOLUTION:</b>
+Let $\Omega = $ all samples of size 10. What is its size?
+Instead of writing ${100\choose 10}$, we shall follow the
+steps that a typical quality control officer would take: pick
+one, then pick the next, then the next and so on. This stepwise
+approach is generally better 
+<a href="javascript:hideShow('why');">(Why?)</a>
+<div id="why" style="display:none;background-color:#ffcccc;">Such formulae
+make tacit assumptions about whether order is important or
+not. These assumptions may not be compatible with a given
+problem. Also, not all answers are expressible in terms of these formulae.</div>
+than jumping into a $^nC_r$
+or $^nP_r$ formula. 
+<p></p>
+Here the first step may be done in 100 ways, the next in 99 ways,
+etc all the way upto $100-10+1=91$ ways. 
+<p></p>
+So $|\Omega| = 100\times 99\times\cdots\times 91.$
+<p></p>
+By the given condition,  all the outcomes are equally likely. 
+<p></p>
+Let $A = $ the event that the box is rejected. 
+<p></p>
+Thus $A$ is the event that the box contains 1 or more
+defectives.
+<p></p>
+There are 5 possible cases here: exactly $i$ defectives,
+where $i=1,...,5.$ These are disjoint cases. So we may try
+to find the probabilities of each and add up. But we can save the
+work by working with $A^c$ instead. 
+<p></p>
+Here 
+$A^c=$ the event that the box contains no defective. Again
+we shall find $|A^c|$ stepwise. 
+<p></p>
+The first component may be selected in 95 ways (avoiding the 5
+defectives). The next in 94 ways, etc up to the 10-th component,
+which may be selected in $95-10+1 = 86$ ways. 
+<p></p>
+Hence $|A^c| = 95\times94\times\cdots\times86.$
+<p></p>
+Thus, 
+$$
+P(A^c) = \frac{|A^c|}{|\Omega|} = \frac{95\times94\times\cdots\times86}{100\times99\times\cdots\times91}.
+$$
+ ■
+</p>
+
+<p></p>
+Here is one example where we shall need the inclusion-exclusion
+formula.
+<p></p>
+
+<p>
+<b>EXAMPLE 10:</b>&nbsp;
+10 distinct balls are dropped randomly over 3 (distinct) boxes. Each box
+can hold any number of balls. What is the probability that at
+least one box will remain empty?
+<p></p>
+<b>SOLUTION:</b>
+Such "at least" problems usually mean that our event is the union
+of some simpler events. Since the simpler events may not be
+disjoint, we need the inclusion-exclusion formula.
+<p></p>
+Let $\Omega=$ the set of all possible ways of dropping the
+balls. Then $|\Omega| = 3^{10}.$
+<p></p>
+We assume that all the outcomes are equally likely.
+<p></p>
+Let $A_i=$the event that the $i$-th box remains empty,
+where $i=1,2,3.$ 
+<p></p>
+Then we are looking for $P(A_1 \cup A_2\cup A_3).$
+<p></p>
+By the inclusion-exclusion formula, this is the same as
+$$
+P(A_1)+P(A_2)+P(A_3)-\big[P(A_1\cap A_2)+P(A_2\cap A_3)+P(A_3\cap
+A_1) \big] + P(A_1\cap A_2\cup A_3).
+$$
+Since the labelling of the boxes are arbitrary, we have $P(A_1)
+= P(A_2)=P(A_3).$ 
+<p></p>
+Similarly, the three probabilities inside the exclusion term are
+also equal to each other. Thus we are left with 
+$$
+3P(A_1)-3P(A_1\cap A_2)+ P(A_1\cap A_2\cup A_3).
+$$
+Now $|A_1| = 2^{10}$ and $|A_1\cap A_2| = 1^{10}$
+<a href="javascript:hideShow('box');">(Why?)</a>
+<div id="box" style="display:none;background-color:#ffcccc;">Since all the 10 balls
+must now land in the third box.</div>.
+<p></p>
+Also $|A_1\cap A_2\cap A_3| = 0$
+<a href="javascript:hideShow('nobox');">(Why?)</a>
+<div id="nobox" style="display:none;background-color:#ffcccc;">This is
+impossible. If <i>all</i> the boxes remain empty,  where
+have the balls gone?</div>.
+<p></p>
+So $P(A_1) = \frac{|A_1|}{|\Omega|} = \left(\frac 23\right)^{10}$
+and $P(A_1\cap A_2) = \frac{|A_1\cap A_2|}{|\Omega|} =
+\left(\frac 13\right)^{10}. $
+<p></p>
+Hence the required answer is $3\times \left[ \left(\frac 23\right)^{10}-\left(\frac 13\right)^{10} \right] = \frac{2^{10}-1}{3^9}.$
+<p></p>
+ ■
 </p>
 
 <p></p>
@@ -915,7 +1038,7 @@ in detecting theoretical mistakes too.
 <p></p>
 
 <p>
-<b>EXAMPLE 9:</b>&nbsp;
+<b>EXAMPLE 11:</b>&nbsp;
 A deck of 10 cards labelled 1,...,10 is shuffled thoroughly. We shall
 say that the $i$-th card is <i>at home</i>, if it is in
 the $i$-th positron after the shuffle. Write an R code to
@@ -943,7 +1066,7 @@ for(k in 1:5000) {
 }
 mean(event)
 `));"/>
- ///
+ ■
 </p>
 
 <h2><a
