--- a/prob1_2024/fluc.html
+++ b/prob1_2024/fluc.html
@@ -337,7 +337,7 @@ theorem.
 <p></p>
 
 <fieldset>
-<legend><b><i>Inermediate value theorem for paths</i></b></legend>
+<legend><b><i>Intermediate value theorem for paths</i></b></legend>
 Let $\alpha:(m,p)$ and $\beta:(n,q)$ with
 $m,n,p,q\in{\mathbb Z}$ and $m&lt;n.$ Let $L$ be any integer
 strictly between $p$ and $q.$ 
