--- a/prob1_2024/fluc.html
+++ b/prob1_2024/fluc.html
@@ -97,6 +97,7 @@ body,table {
 }
 
 .scrpt {
+  margin:10px;
   border-left: 5px solid black;
 }
 
@@ -387,8 +388,10 @@ is above $L$).
 
 <p></p>
 Then the path must meet $L$ at time $k+1.$
-<p></p>
+<blockquote class="scrpt">
+<b>Because:</b>
 Otherwise, at time $k+1,$ the path  must
+<blockquote>
 <ol type="">
 
 <li>either be below $L$ (impossible, since $k$ was the maximum)</li>
@@ -397,7 +400,10 @@ Otherwise, at time $k+1,$ the path  must
 move more than one step from time $k$ to $k+1.$)</li>
 
 </ol>
+</blockquote>
 
+</blockquote>
+So taking $t = k+1$ will complete the proof.
 <b><i>[QED]</i></b>
 </p>
 
