--- a/prob1_2024/fluc.html
+++ b/prob1_2024/fluc.html
@@ -331,7 +331,11 @@ interconnected. Their interconnections are shown below:
 </tr>
 </table>
 </center>
-
+Since we are assuming that all paths in the sample space are
+equally likely, computing probabilities of different events
+amounts to finding the size of the events (<i>i.e.</i>, counting the
+number of paths in the event). So the theorems are presented in
+terms of sizes of events rather than in terms of their probabilities. 
 <p></p>
 We shall start with a discrete version of the intermediate value
 theorem. 
