--- a/prob1_2024/fluc.html
+++ b/prob1_2024/fluc.html
@@ -583,6 +583,18 @@ $$
 N_{n-1,r-1}-N_{n-1,r+1}.
 $$
 </fieldset>
+First let us look at some sample paths for $n=6$ and $r=2:$
+<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/first.png"></th>
+</tr>
+<tr>
+<th>(a) Does not end at $(n,r).$ (b)
+OK. (c) Attains $r$ before $n.$</th>
+</tr>
+</table>
+</center>
 
 <p>
 <b><i>Proof:</i></b>
